-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.5.0-beta1, Qt Creator 3.6.0-beta1
-
None
-
OS X 10.10.4
Qt Creator 3.5.81
Qt 5.4
I just built Qt Creator 3.5.81 from source.
I have two iPhones (both on ios 8.4) connected to the computer, one is a development device that is in the "Ready to Use" state. The other is in a "Connected" state, but is not used for development, so I don't want it to be deployable.
When a device in the Connected state is plugged in (and continuing until Qt Creator is restarted, my active window frequently loses focus for a few microseconds at a time.
Perfectly reproducible on my setup. Has no problem if only the development device is connected. My not-from-source Qt Creator (3.3.0) has no problem.
I wrote a quick python script to determine what was stealing the focus and quantify how often. Output is the number of microseconds since starting and the app who has focus, any time focus is changed.
1 iTerm 26 iostool 34 loginwindow 35 iTerm 337 Qt Creator 518 Google Chrome 685 iostool 699 Google Chrome 1347 iostool 1361 Google Chrome 2001 iostool 2014 Google Chrome 2662 iostool 2675 Google Chrome 3324 iostool 3338 Google Chrome 3985 iostool 4000 Google Chrome 5454 iostool 5468 Google Chrome 6610 iostool 6624 Google Chrome 8115 iostool 8128 Google Chrome 9102 iostool 9114 Google Chrome 9757 iostool 9772 Google Chrome 11214 iostool 11230 Google Chrome 11875 iostool 11889 Google Chrome 12538 iostool 12559 Google Chrome 13198 iostool 13212 Google Chrome 13854 iostool 13863 Google Chrome 14518 iostool 14531 Google Chrome 15179 iostool 15194 Google Chrome 15833 iostool 15849 Google Chrome
(happy to include a longer time period, but this seems to demonstrate the issue.)
| For Gerrit Dashboard: QTCREATORBUG-14837 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 122901,3 | iOS: Keep iostool from stealing focus | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |