iOS: Keep iostool from stealing focus

This was triggered by fixing the iostool Info.plist in
339a8b619e2ddc06370aa9dfe5cbb985f8acebad

Define QT_MAC_DISABLE_FOREGROUND_APPLICATION_TRANSFORM, similar to how it
was done for qml(2)puppet in f6303e67840ce2604a5bdfdceb742e7ec7c9d95d

Task-number: QTCREATORBUG-14837
Change-Id: Ia0dda338361900c519bbaaef225b6a613e928817
Reviewed-by: Erik Verbruggen <erik.verbruggen@theqtcompany.com>